# FileTransfer

./: .gitignore  FileTransfer.sln  README.md
FileTransfer/: CMakeLists.txt  FileTransfer.vcxproj  FileTransfer.vcxproj.filters  certmanager.cpp  certmanager.h  client.cpp  client.h  main.cpp  server.cpp  server.h
